[package]
name = "cargo-prof"
description = "Tools to make profiling Rust programs easier"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jackos/prof"
repository = "https://github.com/jackos/prof"
keywords = ["cargo", "profile", "subcommmand", "profiling"]

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.2.17", features = ["derive"] }
color-eyre = "0.6.2"
human_bytes = "0.3.1"
regex = "1.6.0"
prof = {path=".."}
