[package]
name = "cargo-prof"
description = "Tools to make profiling Rust programs easier"
version = "0.1.4"
edition = "2021"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/jackos/prof"
repository = "https://github.com/jackos/prof"
keywords = ["cargo", "profile", "subcommmand", "profiling"]

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.2.17", features = ["derive"] }
color-eyre = "0.6.2"
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

prof = {path="..", version = "0.1.4"}
